# cpp-check-suite

./: .clang-format  .clang-tidy  .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: coverage.cmake  sanitizer.cmake  valgrind.cmake  warnings.cmake
scripts/: asan.sh  build.sh  coverage.sh  full_checks.sh  ubsan.sh  valgrind.sh
src/: CMakeLists.txt  bad_code.cpp
